--- a/style.css
+++ b/style.css
@@ -1,35 +1,43 @@
 /*CSS reset settings here*/
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 5px;
+    padding: 5px;
    }
    #wrapper{
     width: 950px;
     background-color: silver;
-    margin: 0px auto;
+    margin: 5px auto;
+    padding: 5px auto;
    }
    #header{
     min-height: 150px;
     background-color: green;
+    display: block;
    }
    #navigation{
     min-height: 300px;
     width: 200px;
     background-color: blue;
+    display: inline-block;
    }
    #main_content{
     min-height: 400px;
     width: 700px;
     background-color: red;
+    display: inline-block;
+    vertical-align: top;
+    margin-left:10px;
    }
    .subcontents{
     min-height: 200px;
     width: 210px;
     background-color: yellow;
+    display: inline-block;
    }
    #advertisement{
     min-height: 120px;
-    width: 660px;
+    width: 680px;
     background-color: purple;
+    margin-top: 10px;
    }
    
